--- a/templates/layout.html.ejs
+++ b/templates/layout.html.ejs
@@ -17,10 +17,12 @@
         or
         <a href="/signup">Sign Up</a>
         or 
-        <a href="/picofday">pic</a>
+        <a href="/">Homepage</a>
+        or 
+        <a href="/weather">Weather</a>
       <% } %>
     </header>
-    <h1>My Blog</h1>
+    <h1>Nasa website</h1>
     <div class="content">      
       <%- post %>  
       <%- list %>  
