--- a/templates/new-post.html.ejs
+++ b/templates/new-post.html.ejs
@@ -1,9 +1,9 @@
 <div>
   
-  <h2>New Blog Post</h2>
-  <form method="POST" action="/posts">
+  <h2>New Comment</h2>
+  <form method="POST" action="/posts/<%=date%>">
 
-    <label>Title</label>
+    <label>User</label>
     <input type="text" name="title" required/>
 
     <label>Content</label>
